fix: fix scrollbar on ChatMessagesContainer

--- a/client/src/pages/Chat/chat.scss
+++ b/client/src/pages/Chat/chat.scss
@@ -27,11 +27,6 @@
     }
   }
 
-  .chat-messages-container {
-    height: 100%;
-    overflow: hidden;
-  }
-
   .chat-input-container {
     padding-top: 0.5rem;
 
